using UnityEngine;

public static class AnimationStrings 
{
    //애니메이터의 파라메터명으로 변수를 초기화
    public static string IsMoving = "isMoving";
    public static string IsSpringt = "isSprint";
    public static string yVelocity = "yVelocity";
    public static string Jump = "Jump";
    public static string IsGrounded = "isGrounded";
}
